--- a/values.yaml
+++ b/values.yaml
@@ -40,9 +40,74 @@ securityContext: {}
   # runAsNonRoot: true
   # runAsUser: 1000
 
+containerPorts:
+  http: 8080
+  https: 8443
+
 service:
-  type: ClusterIP
+# trivial setup
+#  type: ClusterIP
   port: 8080
+
+  ## @param service.type Kubernetes Service type
+  ##
+  type: LoadBalancer
+  ## @param service.ports.http Service HTTP port
+  ## @param service.ports.https Service HTTPS port
+  ##
+  ports:
+    http: 8080
+    https: 8443
+  ## @param service.advertisedHttpsPort Port number used in the rendered URLs for the administrator login.
+  ##
+  advertisedHttpsPort: 443
+  ## @param service.httpsTargetPort Service Target HTTPS port
+  ## defaults to https unless overridden to the specified port.
+  ## if you want the target port to be "http" or "80" you can specify that here.
+  ##
+  httpsTargetPort: https
+  ## @param service.nodePorts [object] Node Ports to expose
+  ## nodePorts:
+  ##   http: <to set explicitly, choose port between 30000-32767>
+  ##   https: <to set explicitly, choose port between 30000-32767>
+  ##
+  nodePorts:
+    http: ""
+    https: ""
+  ## @param service.clusterIP EJBCA service Cluster IP
+  ## e.g.:
+  ## clusterIP: None
+  ##
+  clusterIP: ""
+  ## @param service.loadBalancerIP EJBCA service Load Balancer IP
+  ## ref: https://kubernetes.io/docs/concepts/services-networking/service/#type-loadbalancer
+  ##
+  loadBalancerIP: ""
+  ## @param service.externalTrafficPolicy Enable client source IP preservation
+  ## ref https://kubernetes.io/docs/tasks/access-application-cluster/create-external-load-balancer/#preserving-the-client-source-ip
+  ##
+  externalTrafficPolicy: Cluster
+  ## @param service.annotations Service annotations
+  ##
+  annotations: {}
+  ## @param service.loadBalancerSourceRanges Limits which cidr blocks can connect to service's load balancer
+  ## Only valid if service.type: LoadBalancer
+  ##
+  loadBalancerSourceRanges: []
+  ## @param service.extraPorts Extra ports to expose in the service (normally used with the `sidecar` value)
+  ##
+  extraPorts: []
+  ## @param service.sessionAffinity Session Affinity for Kubernetes service, can be "None" or "ClientIP"
+  ## If "ClientIP", consecutive client requests will be directed to the same Pod
+  ## ref: https://kubernetes.io/docs/concepts/services-networking/service/#virtual-ips-and-service-proxies
+  ##
+  sessionAffinity: None
+  ## @param service.sessionAffinityConfig Additional settings for the sessionAffinity
+  ## sessionAffinityConfig:
+  ##   clientIP:
+  ##     timeoutSeconds: 300
+  sessionAffinityConfig: {}
+
 
 ingress:
   ## @param ingress.enabled Enable ingress controller resource
@@ -465,8 +530,10 @@ mariadb:
   initdbScripts:
     1_create_lb_user.sql: |-
       CREATE USER 'ca3s_user'@'%' IDENTIFIED BY 's3cr3t';
+      CREATE USER 'ca3s_user_backup'@'%' IDENTIFIED BY 'foo12345678';
     2_config_permissions_lb_user.sql: |-
-      GRANT ALL PRIVILEGES ON *.* TO 'ca3s_user'@'%';
+      GRANT SELECT, INSERT, UPDATE, DELETE ON ca3s_db.* TO 'ca3s_user'@'%';
+      GRANT SELECT ON ca3s_db.* TO ca3s_user_backup'@'%';
 
   primary:
     ## Enable persistence using Persistent Volume Claims
